Fix 'font-size' not being relative to screen size for better readability

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,9 +15,8 @@
   --color-black: black;
   --color-gray: gray;
 
-  /* TODO: set font sizes relative to screen? */
-  --font-size-big: 50px;
-  --font-size-normal: 46px;
+  --font-size-normal: clamp(16px, 5vw, 32px);
+  --font-size-big: 1.2rem;
   font-size: var(--font-size-normal);
 
   --font-weight-bold: 700;
@@ -26,7 +25,7 @@
 }
 
 body {
-  padding: 1rem;
+  padding: 1.2rem;
 }
 
 h1 {
